fixing alignment for making it responsive

--- a/src/components/Footer/ContactUs.module.css
+++ b/src/components/Footer/ContactUs.module.css
@@ -115,9 +115,6 @@
     width: 30%;
     align-items:center;
     justify-items: center;
-
-    
-
     
 }
 
@@ -143,4 +140,9 @@
 .link {
     color: white;
     text-decoration: none;
+  }
+
+
+  @media (max-width:780px) {
+    
   }
