--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,23 +1,25 @@
-.header{
+.header {
     display: flex;
     background-color: #003a50;
     height: 10vh;
     padding: 2%;
-   justify-content: space-between;
-   align-items: center;
-} 
+    
+    justify-content: space-between;
+    align-items: center;
+}
 
-.navbar{
+.navbar {
     display: flex;
     width: 70%;
-  
+    background-color: #003a50;
     justify-content: space-between;
 }
-.navbar-items{
+
+.navbar-items {
     list-style-type: none;
     display: flex;
     color: white;
-    width:70%;
+    width: 70%;
     justify-content: space-between;
     padding-inline: 0%;
     font-weight: 400;
@@ -25,13 +27,45 @@
 }
 
 
-.login-button{
+.login-button {
     padding-inline: 2%;
     color: #003a50;
     text-transform: uppercase;
     letter-spacing: 0.5cap;
     font-weight: 800;
     border-radius: 25px;
-    padding-top:1%;
+    padding-top: 1%;
     padding-bottom: 1%;
+}
+
+@media (max-width:780px) {
+    .header{
+        width: 100%;
+    }
+    .navbar {
+        flex-direction: column;
+        background-color: rgba(127, 255, 212,0.9);
+        position: absolute;
+        color: black;
+        top: 0;
+        height: 90vh;
+        width: 100%;
+        margin: 0;
+        z-index: 100;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .navbar-items {
+        flex-direction: column;
+        color: black;
+        align-items: center;
+        /* background-color: rgb(13, 163, 113); */
+    }
+
+    .navbar-items>li{
+        padding: 10%;
+    }
+
+
 }
