--- a/src/components/OptimiseInfo/OptimiseInfo.css
+++ b/src/components/OptimiseInfo/OptimiseInfo.css
@@ -1,12 +1,15 @@
 .optimiseinfo{
     display: flex;
-    justify-content:center ;
-    height: 70vh;
+    justify-content:center;
+    width: 100%;
+    /* padding-inline: 5%; */
     align-items: center;
+ 
 }
 
 .info-1{
     width: 30%;
+    height: 100%;
 }
 
 .info-1>p{
@@ -23,9 +26,43 @@
 .info-2{
     height: 100%;
     align-content: center;
+    width: 60%;
+    
 }
 
 .info-2>img{
    height: 70%;
    margin-top: 20%;
+   width: 100%;
+   object-fit: cover;
+}
+
+@media (max-width:780px) {
+    .optimiseinfo{
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+   
+        justify-content: center;
+    }
+    .info-1{
+        width: 80%;
+        align-items: center;
+        text-align: center;
+
+    }
+    .info-1>p{
+        width: 100%;
+    }
+    
+    .info-2 {
+        width: 80%;
+        height: auto;
+    }
+    .info-2 > img {
+        height: 50%;
+        width: 100%;
+     
+        margin-top: 10%;
+    }
 }
